# mqlib

./: CMakeLists.txt  mq.hpp
def/: handler.hpp  instance.hpp
def/util/: buffer.hpp
impl/: handler.cpp  instance.cpp
